--- a/views/parts/announcement.phtml
+++ b/views/parts/announcement.phtml
@@ -1,11 +1,11 @@
-<?php $cookieName = "site-notification-02-10-2017"; ?>
-<?php $giveAnnouncement = true; ?>
+<?php $cookieName = "site-notification-16-11-2017"; ?>
+<?php $giveAnnouncement = false; ?>
 
 <?php if(!isset($_COOKIE[$cookieName]) && $giveAnnouncement): ?>
 
     <div id="announcement">
         <span class="notification">
-            <b>Announcement:</b> Thanks to everyone for donating to cover the yearly server costs! You guys are not only fast in Portal 2, but also in raising funds. We met the donation goal in under half an hour!
+            <b>Announcement:</b> We are currently experiencing issues syncing with the Steam leaderboards. If your score is not showing up, please submit it via your profile.
         </span>
         <span class="close-btn"></span>
     </div>
