--- a/views/parts/navigation.phtml
+++ b/views/parts/navigation.phtml
@@ -79,7 +79,7 @@
           </a>          
       </li>
       <li class="nav_dropdown">
-          <a href="https://discord.gg/0ohYsRHYh540eI50" target="_blank" style="height: 29px">
+          <a href="https://discordapp.com/invite/hRwE4Zr" target="_blank" style="height: 29px">
               <div class="nav_icon" style="background: url('/images/discord_noborder.png'); background-size: 29px 29px;"></div>
               <div class="btnLabel">Discord</div>
           </a>          
