--- a/views/parts/navigation.phtml
+++ b/views/parts/navigation.phtml
@@ -71,11 +71,11 @@
 <div class="nav_dropdown">
     <div id="aperture_icon" class="nav_icon"></div>
     <div class="btnLabel">More</div>
-    <ul style="width:140px">
+    <ul style="width:145px">
       <li class="nav_dropdown">
           <a href="http://www.speedrun.com/Portal_2" target="_blank" style="height: 29px">
               <div class="nav_icon" style="background: url('/images/running.png'); background-size: 29px 29px;"></div>
-              <div class="btnLabel">Full runs</div>
+              <div class="btnLabel">Full Game Runs</div>
           </a>          
       </li>
       <li class="nav_dropdown">
@@ -90,10 +90,16 @@
               <div class="btnLabel">GitHub</div>
           </a>          
       </li>
-        <li>
+      <li>
           <a href="/about" style="height: 29px">
-            <div id="aperture_icon" class="nav_icon" style="background: url('/images/cupcake.png'); background-size: 29px 29px;"></div>
+            <div class="nav_icon" style="background: url('/images/cupcake.png'); background-size: 29px 29px;"></div>
             <div class="btnLabel">About</div>
+          </a>
+      </li>
+      <li>
+          <a href="/wallofshame" style="height: 29px">
+            <div class="nav_icon" style="background: url('/images/wallofshame.png'); background-size: 29px 29px;"></div>
+            <div class="btnLabel">Wall of Shame</div>
           </a>
       </li>
     </ul>
