Add donators page

--- a/views/parts/navigation.phtml
+++ b/views/parts/navigation.phtml
@@ -72,6 +72,12 @@
     <div id="aperture_icon" class="nav_icon"></div>
     <div class="btnLabel">More</div>
     <ul style="width:145px">
+      <li>
+          <a href="/donators" style="height: 29px">
+            <div class="nav_icon" style="background: url('/images/cakeicon.png'); background-size: 29px 29px;"></div>
+            <div class="btnLabel">Donators</div>
+          </a>
+      </li>
       <li class="nav_dropdown">
           <a href="http://www.speedrun.com/Portal_2" target="_blank" style="height: 29px">
               <div class="nav_icon" style="background: url('/images/running.png'); background-size: 29px 29px;"></div>
