Fix grammar and update cl_fov bind

--- a/views/about.phtml
+++ b/views/about.phtml
@@ -16,7 +16,7 @@
 
     <h2 class="subtitle">Modifications</h2>
     <div class="container smallContainer">
-        Texture changes of doors, weapon models and challenge mode node flags are allowed as long as they do not provide any significant advantage.
+        Texture changes of doors, weapon models, challenge mode flags etc. are allowed as long as they do not provide any significant advantage.
         <br>
         Plugins are only allowed to read game states.
     </div>
@@ -60,9 +60,9 @@
     <div class="container smallContainer">
         Proof has to be recorded as soon as possible and cannot end before a run finishes.
         <br>
-        Admins are allowed to question any runner for proof all the time in case cheating is highly suspected.
+        Admins are allowed to question any runner for proof at any time in case cheating is suspected.
         <br>
-        Demo recording is currently the easiest way to determine if someone cheating or not.
+        Demo recording is currently the easiest way to determine if someone is cheating or not.
     </div>
 
     <h1 class="title">Console commands</h1>
@@ -95,8 +95,8 @@
                 <td>Disabling this allows the engine to render level structures in out of bounds space.</td>
             </tr>
             <tr>
-                <td>cl_fov [50-140]</td>
-                <td>Changes player's field-of-view.</td>
+                <td>bind [KEY] "incrementvar cl_fov 50 90 40"</td>
+                <td>Binds a key to zoom faster. Useful when playing as P-body.</td>
             </tr>
         </table>
     </div>
