--- a/views/parts/footer.phtml
+++ b/views/parts/footer.phtml
@@ -1,6 +1,6 @@
 <div id="footer">
     <div class="footerleft">
-        Originally developed and designed by <a href="/profile/76561198043770492" target="_blank">Nuclear.</a> Improved and maintained by <a href="/profile/76561198047900528" target="_blank">iVerb</a>
+        Originally developed and designed by <a href="/profile/76561198043770492" target="_blank">ncla</a>. Improved and maintained by <a href="/profile/76561198047900528" target="_blank">iVerb</a> and <a href="/profile/76561198049848090" target="_blank">NeKz</a>.
     </div>
     <div class="footeright">This page was generated in <?php echo round(microtime(true) - $this->startupTimestamp, 3); ?> seconds</div>
 </div>
