--- a/views/about.phtml
+++ b/views/about.phtml
@@ -2,15 +2,94 @@
     <h1 class="largeTitle">About</h1>
 
     <h1 class="title">Rules</h1>
+
+    <h2 class="subtitle">General</h2>
     <div class="container">
         Any and all modifications of the game that change the physics or controls in any way is strictly banned, with the exception of some console commands, see below.
         <br>
         In particular, note that this means that changing the server tickrate is forbidden, as well as any usage of the 'give' command.
-        <br><br>
-        Futhermore, all top 5 scores obtained after May 11th, 2017 require proof in the form of a demo or a video. If no sufficient proof can be provided, the score will be removed.
+    </div>
+
+    <h2 class="subtitle">Modifications</h2>
+    <div class="container smallContainer">
+        Texture changes of doors, weapon models, challenge mode flags etc. are allowed as long as they do not provide any significant advantage.
+        <br>
+        Plugins are only allowed to read game states.
+    </div>
+
+    <h2 class="subtitle">Bindings</h2>
+    <div class="container smallContainer">
+        Abusing the use of bind or alias commands to achieve more than one action with the same key is not allowed.
+        <br>
+        An action is any command that sends a key down or key up event denoted with a plus or minus sign.
+    </div>
+
+    <h2 class="subtitle">Scripting</h2>
+    <div class="container smallContainer">
+        Scripts and macros which automate your inputs are banned.
+    </div>
+
+    <h2 class="subtitle">Banned exploits</h2>
+    <div class="container smallContainer">
+        Any form of abusing pause, unpause, setpause or toggleconsole etc. is forbidden. It is known that pausing affects the engine in a way that makes timing inconsistent and inaccurate.
+        <br>
+        Using a special build version or any platform exclusive glitch is also forbidden. Use the latest available version of the game.
+        <br>
+        <br>
+        <ul>
+            <li><a href="https://youtu.be/CLzVfyYZhQA" target="_blank">Pause Clipping</a> - cannot be timed</li>
+            <li><a href="https://youtu.be/tWjyVopD5Eo" target="_blank">Fullscreen Pause Abuse</a> - cannot be timed and OS specific</li>
+            <li><a href="https://youtu.be/QdRcAm0rvGQ?t=41" target="_blank">OoB Velocity Reset</a> - cannot be timed</li>
+            <li><a href="https://youtu.be/V0u5r3g-DVs" target="_blank">Pause Manipulation</a> - cannot be timed</li>
+            <li>Fast Spawn - unfair advantage</li>
+            <li>Timer Freeze - cannot be timed</li>
+            <li><a href="https://youtu.be/1C6XVOuf_Q8" target="_blank">Lag Super Reportal</a> - indirect modification</li>
+            <li><a href="https://youtu.be/HFpqVaUbUkk?t=640" target="_blank">Moving Portals Storage</a> - requires setup</li>
+        </ul>
+    </div>
+
+    <h2 class="subtitle">Demo uploading</h2>
+    <div class="container smallContainer">
+        Uploading the wrong demo to a run is strictly forbidden. This also means that uploading your partner's pov file twice is not allowed as every entry has to be unique.
+    </div>
+
+    <h2 class="subtitle">Proof</h2>
+    <div class="container smallContainer">
+        Proof has to be recorded as soon as possible and cannot end before a run finishes.
+        <br>
+        Admins are allowed to question any runner for demo or video at any time in case cheating is suspected.
+        <br>
+        Demo recording is currently the easiest way to determine if someone is cheating or not.
+    </div>
+
+    <h2 class="subtitle">Changes</h2>
+    <div class="container smallContainer">
+        <table class="table table-condensed">
+            <tr>
+                <td style="min-width: 100px">2017-05-11</td>
+                <td>All top 5 scores require proof in the form of a demo or a video. If no sufficient proof can be provided, the score will be removed.</td>
+            </tr>
+            <tr>
+                <td>2019-01-06</td>
+                <td>Scripting and binding multiple command buttons to a key is banned, value of cl_fov is only valid between 50 to 140 and taunt manipulation is now allowed.</td>
+            </tr>
+            <tr>
+                <td>2019-08-23</td>
+                <td>Changing console variable m_yaw to effectively stop mouse movement in either the horizontal or vertical direction is banned.</td>
+            </tr>
+            <tr>
+                <td>2019-09-14</td>
+                <td>Console variable fps_max may only be set to values between 30 and 999. Uncapped value of 0 will not get your run banned if it is determined to not have given an advantage.</td>
+            </tr>
+            <tr>
+                <td>2019-11-03</td>
+                <td>All top 10 scores require complete proof in the form of a demo or video. All top 5 scores require complete demos as proof, videos will not be accepted. All previous scores will be grandfathered in.</td>
+            </tr>
+        </table>
     </div>
 
     <h1 class="title">Console commands</h1>
+
     <h2 class="subtitle">Gameplay</h2>
     <div class="container smallContainer">
         <table class="table table-condensed">
@@ -19,14 +98,14 @@
                 <td>Disabling this will stop the player from curving into nearby portals when falling.</td>
             </tr>
             <tr>
-                <td>developer</td>
+                <td>"developer 1; contimes 0"</td>
                 <td>Allows you to move as soon as the chamber loads instead of being stuck for ~0.5 seconds.<br>
                     We allow this command because the same effect can be achieved by loading the chamber
                     from the main menu instead of restarting it.</td>
             </tr>
             <tr>
                 <td style="max-width: 260px">"mat_ambient_light_b 0.1; mat_ambient_light_r 0.1; mat_ambient_light_g 0.1;"</td>
-                <td>Turns off the game's lighting and allows you to see in the dark. This is useful in Turret Factory. <br>
+                <td>Turns off the game's lighting and allows you to see in the dark. This is useful in Turret Factory.<br>
                     We allow this command because it levels the playing field for players having displays with limited brightness.
                 </td>
             </tr>
@@ -34,8 +113,17 @@
                 <td>bind [KEY] taunt</td>
                 <td>Binds a key to taunt while midair in cooperative. Used to skip forced animations of new gestures.</td>
             </tr>
+            <tr>
+                <td>r_portal_use_pvs_optimization</td>
+                <td>Disabling this allows the engine to render level structures in out of bounds space.</td>
+            </tr>
+            <tr>
+                <td>bind [KEY] "incrementvar cl_fov 50 90 40"</td>
+                <td>Binds a key to zoom faster. Useful when playing as P-body.</td>
+            </tr>
         </table>
     </div>
+
     <h2 class="subtitle">Recording demos</h2>
     <div class="container">
         <table class="table table-condensed">
@@ -59,8 +147,8 @@
                 </td>
             </tr>
             <tr>
-                <td>bind W "+forward; +remote_view"</td>
-                <td>Binds your W key to permanently show your partner view while playing cooperative.
+                <td>bind [KEY] "+forward; +remote_view"</td>
+                <td>Binds a key to permanently show your partner view while playing cooperative.
                 This way you don't need to toggle the partner view manually every time the chamber is restarted.
                 </td>
             </tr>
@@ -73,7 +161,7 @@
 
     <h1 class="title">Videos</h1>
     <div class="container">
-        A popular tool used to convert demo files to nicely looking smooth videos is  <a href="https://code.google.com/archive/p/srcdemo2">SrcDemo<sup>2</sup></a>.
+        A popular tool used to convert demo files to nicely looking smooth videos is <a href="https://code.google.com/archive/p/srcdemo2">SrcDemo<sup>2</sup></a>.
     </div>
 
     <h1 class="title">Point calculation</h1>
@@ -81,7 +169,7 @@
         Currently, the top <?=Leaderboard::numTrackedPlayerRanks?> times are tracked for each map.
         A player's points for a specific chamber is calculated as follows:
         <style>
-            table.fraction  {
+            table.fraction {
                 font-size: 15px;
                 color: inherit;
                 margin: 15px;
@@ -201,7 +289,7 @@
         This site is currently hosted on <a href="https://www.fastcomet.com/">FastComet</a>.
         </p>
         <p>
-        Demos are stored using <a href="https://www.google.com/drive/">Google Drive</a>. 
+        Demos are stored using <a href="https://www.google.com/drive/">Google Drive</a>.
         The folder containg all demos can be found <a href="https://drive.google.com/folderview?id=<?=DemoManager::demoFolderId?>&usp=sharing">here</a>.
         </p>
     </div>
