--- a/views/profile.phtml
+++ b/views/profile.phtml
@@ -1191,6 +1191,10 @@
 
     function addChangeEntry(entry) {
         var date = entry.time_gained;
+        var isAdmin = <?= SteamSignIn::loggedInUserIsAdmin() ? "true" : "false" ?>;
+        var isMyProfile = <?= SteamSignIn::isLoggedIn($user->profileNumber) ? "true" : "false" ?>;
+        var mayEdit = isAdmin || (isMyProfile && (entry.banned != 1));
+
         var $dateDifference = $("<div class='dateDifference'></div>");
 
         if (realDate(date)) {
@@ -1217,7 +1221,7 @@
         });
         var $entry = $(
             "<div class='changeEntry'>" +
-                "<div class='cell changeMenuToggle' onclick='openChangeMenu(event)'" + ((!profilePermissions) ? " style='cursor: default'" : "") + ">" +
+                "<div class='cell changeMenuToggle' onclick='openChangeMenu(event)'" + ((!mayEdit) ? " style='cursor: default'" : "") + ">" +
                     "<i class='fa fa-xs fa-caret-right' aria-hidden='true'></i>" +
                 "</div>" +
                 "<div class='date'>" +
@@ -1270,7 +1274,7 @@
 
         $entry.data(entry);
 
-        if (profilePermissions) {
+        if (mayEdit) {
             $entry.hover(
                 function () {
                     $changeMenuToggle = $(this).find(".changeMenuToggle i");
@@ -1286,12 +1290,11 @@
     }
 
     function openChangeMenu(event) {
-
-        if (!profilePermissions)
-            return;
-
+        var isAdmin = <?= SteamSignIn::loggedInUserIsAdmin() ? "true" : "false" ?>;
+        var isMyProfile = <?= SteamSignIn::isLoggedIn($user->profileNumber) ? "true" : "false" ?>;
+        
         var $target = $(event.target);
-
+    
         var $changeMenu, $changeMenuToggleIcon;
         if ($target.hasClass("changeMenuToggle")) {
             $changeMenu = $target.parent().find(".changeMenu");
@@ -1301,6 +1304,12 @@
             $changeMenu = $target.parent().parent().find(".changeMenu");
             $changeMenuToggleIcon = $target;
         }
+
+        var entry = $changeMenu.closest(".changeEntry").data();
+
+        if (!isAdmin && (!isMyProfile || (entry.banned == 1)))
+            return;
+
         event.stopPropagation();
 
         if ($changeMenu.hasClass("open")) {
@@ -1314,7 +1323,6 @@
             closeAllChangeMenus();
             closeSubmissionForm();
 
-            var entry = $changeMenu.closest(".changeEntry").data();
             var entryId = entry.id;
             if ($changeMenu.find(".changeForm").length == 0) {
                 var $content = $(
@@ -1735,7 +1743,13 @@
                     seconds = timestamp.split("s")[0];
                 }
 
-                timestampSeconds = parseInt(seconds) + (parseInt(minutes) * 60) + (parseInt(hours) * 60 * 60);
+                if (hours === 0 && minutes === 0 && seconds === 0) {
+                    timestamp = ytURL.split("#t=")[1];
+                    timestampSeconds = parseInt(timestamp);
+                }
+                else {
+                    timestampSeconds = parseInt(seconds) + (parseInt(minutes) * 60) + (parseInt(hours) * 60 * 60);
+                }
             }
             else if (ytURL.indexOf("#start=") != -1) {
                 timestamp = ytURL.split("#start=")[1];
